--- a/BusDontnet.Tests/BusDontnet.Tests.csproj
+++ b/BusDontnet.Tests/BusDontnet.Tests.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="Moq" Version="4.16.1" />
+        <PackageReference Include="System.Runtime" Version="4.3.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -20,10 +22,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\WebMvc\WebMvc.csproj" />
   </ItemGroup>
 
 </Project>
